fixed image display issue on mobile devices

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -40,7 +40,7 @@ header {
     height: 30rem;
     position: absolute;
     left: calc(50% - 11rem);
-    margin-top: 4rem;
+    margin-top: 7rem;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
     padding: 5rem 1.5rem 1.5rem 1.5rem;
